--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,9 +36,14 @@ android {
 
 dependencies {
 
-    //Kotlin
+    // Kotlin
     implementation "org.jetbrains.kotlin:kotlin-stdlib:1.6.0"
     implementation 'androidx.core:core-ktx:1.7.0'
+
+
+    // Navigation
+    implementation("androidx.navigation:navigation-fragment-ktx:2.4.1")
+    implementation("androidx.navigation:navigation-ui-ktx:2.4.1")
 
     // Rx-Java
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.0'
