--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Compromise">
+<!--        android:theme="@style/Theme.AppCompat.Splash"-->
         <activity
             android:name=".view.MainActivity"
             android:exported="true">
