--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,6 +55,7 @@ dependencies {
     // Rx-Java
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.0'
     implementation 'io.reactivex.rxjava2:rxjava:2.2.8'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
 
     // Test
     testImplementation 'junit:junit:4.+'
